Fixed <p/> spacing

--- a/nextjs-blog-styled/styles/global.css
+++ b/nextjs-blog-styled/styles/global.css
@@ -22,6 +22,10 @@ a {
   text-decoration: none;
 }
 
+p {
+  margin: auto;
+}
+
 * {
   box-sizing: border-box;
 }
